<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity">
    <EditText
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_field"
            android:hint="@string/prompt_email"
            android:autofillHints="Email"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="58dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="58dp"
            app:layout_constraintBottom_toTopOf="@+id/password_field2"
            app:layout_constraintTop_toBottomOf="@+id/displayname_field"/>
    <EditText
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_field2"
            android:hint="@string/prompt_password"
            android:autofillHints="Password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="58dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="58dp"
            app:layout_constraintBottom_toTopOf="@+id/password_field1"
            app:layout_constraintTop_toBottomOf="@+id/email_field"/>
    <EditText
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_field1"
            android:hint="@string/prompt_password2"
            android:autofillHints="Password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="58dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="58dp" android:layout_marginBottom="200dp"
            app:layout_constraintTop_toBottomOf="@+id/password_field2" app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/registration_button"
            android:layout_width="147dp"
            android:layout_height="76dp"
            android:layout_marginBottom="100dp"
            android:layout_marginEnd="142dp"
            android:layout_marginStart="138dp"
            android:text="@string/action_sign_up_short"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/displayname_field" android:hint="@string/display_name"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="58dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="58dp"
            android:layout_marginTop="160dp"
            app:layout_constraintBottom_toTopOf="@+id/email_field"
            app:layout_constraintTop_toTopOf="parent"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:src="@color/grey"
                android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" android:layout_height="118dp"
                android:layout_width="match_parent"/>
        <TextView
                android:id="@+id/title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_register"
                android:textAlignment="center"
                android:textSize="40sp"
                android:typeface="monospace"
                android:fontFamily="serif-monospace"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>