<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PreLoginActivity">

    <Button
        android:id="@+id/registration_button"
        android:layout_width="147dp"
        android:layout_height="76dp"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_sign_in_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="147dp"
        android:layout_height="76dp"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_sign_up_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registration_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="175dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="40dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012" android:fontFamily="serif-monospace"/>
</android.support.constraint.ConstraintLayout>