<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <CheckBox
            android:text="@string/colours"
            android:layout_width="95dp"
            android:layout_height="61dp" android:id="@+id/colour_check"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/add"
            android:layout_width="132dp"
            android:layout_height="74dp"
            android:id="@+id/add_memo_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintHorizontal_bias="1.0"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/constraintLayout">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/memo_list"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_layout"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="100dp"
                app:layout_constraintVertical_bias="0.38">
        </android.support.v7.widget.RecyclerView>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:progress="@android:integer/config_shortAnimTime" app:layout_constraintVertical_bias="0.47000003"
                android:visibility="invisible" tools:visibility="invisible"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:src="@color/grey"
                android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" android:layout_height="118dp"
                android:layout_width="match_parent" android:contentDescription="@string/todo"/>
        <TextView
                android:id="@+id/title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memo_title"
                android:textAlignment="center"
                android:textSize="55sp"
                android:typeface="monospace"
                android:fontFamily="serif-monospace"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>