<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <Button
            android:id="@+id/login_button"
            android:layout_width="147dp"
            android:layout_height="76dp"
            android:layout_marginBottom="190dp"
            android:layout_marginEnd="142dp"
            android:layout_marginStart="138dp"
            android:text="@string/action_sign_in_short"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_field"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="85dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="84dp"
            android:hint="@string/prompt_email"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26"/>
    <EditText
            android:layout_width="268dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_field" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="85dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="84dp"
            android:hint="@string/prompt_password"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar_login"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:progress="@android:integer/config_shortAnimTime"
            android:visibility="invisible" tools:visibility="invisible" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"
            app:layout_constraintVertical_bias="0.07999998"/>
    <Button
            android:text="Forgot Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="161dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintVertical_bias="0.0"/>
    <CheckBox
            android:text="Stay Logged In?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stay_logged_in_check" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" android:layout_marginStart="8dp"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">

        <ImageView
                android:src="@color/grey"
                android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" android:layout_height="118dp"
                android:layout_width="match_parent"/>
        <TextView
                android:id="@+id/title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:textAlignment="center"
                android:textSize="40sp"
                android:typeface="monospace"
                android:fontFamily="serif-monospace"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>